--- a/index.html
+++ b/index.html
@@ -82,6 +82,12 @@
         </div>
       </div>
     </section>
+<br>
+    <section class="PROJETOS">
+      <div class="titulo"> 
+        <h2> MEUS <span>PROJETOS</span></h2> 
+      </div>
+    </section>
   </main>
 
 
