--- a/index.html
+++ b/index.html
@@ -97,13 +97,13 @@
 
         <div class="projetos-box">
           <h3>WorkNav</h3> <br>
-          <img src="#"> <br> <br>
+          <img src="Design sem nome.jpg"> <br> <br>
           <p> WorkNav, foi um projeto que criei junto com o meu time no projeto integrador do segundo semestre de 2023,
             com o objetivo de ajudar pessoas deficientes a entrar no mercado de trabalho</p>
         </div>
         <div class="projetos-box">
           <h3>Design Thinking</h3> <br>
-          <img src="#"> <br> <br>
+          <img src="image (1).png"> <br> <br>
 
           <p> Neste projeto, eu fui solicitado junto com meu grupo, que foi selecionado após uma apresentação, para
             fazer protótipos para um novo portal acadêmico da instituição de ensino do Eniac</p>
