--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         </div>
         <div class="projetos-box">
           <h3>Ecommerce</h3><br>
-          <img src="#"> <br> <br>
+          <img src="Produtos com preços_20240401_145843_0000.png"> <br> <br>
 
           <p> Desenvolvi meu próprio site de comércio eletrônico a partir de uma plataforma no-code (Shopify) e consegui
             fazer algumas vendas através do Dropshipping.</p>
